--- a/KMeansNew.ipynb
+++ b/KMeansNew.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "KMeansNew.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rreshmikr/ds_lab/blob/main/KMeansNew.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 2,
@@ -39,10 +50,10 @@
       ],
       "metadata": {
         "id": "73ZJ8fgVudjV",
-        "outputId": "9e4c8e99-cd53-4b5f-ff35-4f33f16ac2c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9e4c8e99-cd53-4b5f-ff35-4f33f16ac2c0"
       },
       "execution_count": 8,
       "outputs": [
